
[TestGetWebsiteTime/Base - 1]
RECORDS:
&{StatsTimeSummary:{Pathname:/ Duration:4996 DurationPercentage:33.35} DurationUpperQuartile:7499 DurationLowerQuartile:2503 Pageviews:0 Visitors:167350 Bounces:42004}
&{StatsTimeSummary:{Pathname:/contact Duration:4981 DurationPercentage:33.25} DurationUpperQuartile:7489 DurationLowerQuartile:2495 Pageviews:0 Visitors:166840 Bounces:41972}
&{StatsTimeSummary:{Pathname:/about Duration:5003 DurationPercentage:33.4} DurationUpperQuartile:7501 DurationLowerQuartile:2492 Pageviews:0 Visitors:165998 Bounces:41421}

---

[TestGetWebsiteTime/Browser - 1]
RECORDS:
&{StatsTimeSummary:{Pathname:/ Duration:5009 DurationPercentage:33.46} DurationUpperQuartile:7510 DurationLowerQuartile:2504 Pageviews:0 Visitors:55831 Bounces:13905}
&{StatsTimeSummary:{Pathname:/contact Duration:4962 DurationPercentage:33.15} DurationUpperQuartile:7471 DurationLowerQuartile:2504 Pageviews:0 Visitors:55212 Bounces:13859}
&{StatsTimeSummary:{Pathname:/about Duration:4997 DurationPercentage:33.38} DurationUpperQuartile:7501 DurationLowerQuartile:2475 Pageviews:0 Visitors:55102 Bounces:13835}

---

[TestGetWebsiteTime/Country - 1]
RECORDS:
&{StatsTimeSummary:{Pathname:/ Duration:4976 DurationPercentage:33.33} DurationUpperQuartile:7492 DurationLowerQuartile:2462 Pageviews:0 Visitors:18703 Bounces:4729}
&{StatsTimeSummary:{Pathname:/about Duration:4976 DurationPercentage:33.33} DurationUpperQuartile:7471 DurationLowerQuartile:2468 Pageviews:0 Visitors:18311 Bounces:4624}
&{StatsTimeSummary:{Pathname:/contact Duration:4978 DurationPercentage:33.34} DurationUpperQuartile:7444 DurationLowerQuartile:2515 Pageviews:0 Visitors:18304 Bounces:4584}

---

[TestGetWebsiteTime/Device - 1]
RECORDS:
&{StatsTimeSummary:{Pathname:/ Duration:4960 DurationPercentage:33.23} DurationUpperQuartile:7456 DurationLowerQuartile:2456 Pageviews:0 Visitors:6171 Bounces:1554}
&{StatsTimeSummary:{Pathname:/about Duration:5013 DurationPercentage:33.58} DurationUpperQuartile:7457 DurationLowerQuartile:2560 Pageviews:0 Visitors:6127 Bounces:1532}
&{StatsTimeSummary:{Pathname:/contact Duration:4954 DurationPercentage:33.19} DurationUpperQuartile:7518 DurationLowerQuartile:2578 Pageviews:0 Visitors:5988 Bounces:1515}

---

[TestGetWebsiteTime/Empty - 1]
RECORDS:

---

[TestGetWebsiteTime/Language - 1]
RECORDS:
&{StatsTimeSummary:{Pathname:/ Duration:4973 DurationPercentage:33.48} DurationUpperQuartile:7433 DurationLowerQuartile:2455 Pageviews:0 Visitors:3115 Bounces:790}
&{StatsTimeSummary:{Pathname:/about Duration:5048 DurationPercentage:33.99} DurationUpperQuartile:7515 DurationLowerQuartile:2602 Pageviews:0 Visitors:3079 Bounces:756}
&{StatsTimeSummary:{Pathname:/contact Duration:4832 DurationPercentage:32.53} DurationUpperQuartile:7304 DurationLowerQuartile:2432 Pageviews:0 Visitors:2960 Bounces:778}

---

[TestGetWebsiteTime/OS - 1]
RECORDS:
&{StatsTimeSummary:{Pathname:/ Duration:4985 DurationPercentage:33.67} DurationUpperQuartile:7313 DurationLowerQuartile:2269 Pageviews:0 Visitors:1041 Bounces:258}
&{StatsTimeSummary:{Pathname:/about Duration:4894 DurationPercentage:33.06} DurationUpperQuartile:7346 DurationLowerQuartile:2422 Pageviews:0 Visitors:1032 Bounces:247}
&{StatsTimeSummary:{Pathname:/contact Duration:4925 DurationPercentage:33.27} DurationUpperQuartile:7368 DurationLowerQuartile:2426 Pageviews:0 Visitors:1021 Bounces:258}

---

[TestGetWebsiteTime/Pathname - 1]
RECORDS:
&{StatsTimeSummary:{Pathname:/ Duration:4985 DurationPercentage:100} DurationUpperQuartile:7313 DurationLowerQuartile:2269 Pageviews:0 Visitors:1041 Bounces:258}

---

[TestGetWebsiteTime/Referrer - 1]
RECORDS:
&{StatsTimeSummary:{Pathname:/ Duration:4865 DurationPercentage:100} DurationUpperQuartile:7398 DurationLowerQuartile:2094 Pageviews:0 Visitors:340 Bounces:82}

---

[TestGetWebsiteTime/UTMCampaign - 1]
RECORDS:
&{StatsTimeSummary:{Pathname:/ Duration:5043 DurationPercentage:100} DurationUpperQuartile:7608 DurationLowerQuartile:2509 Pageviews:0 Visitors:107 Bounces:24}

---

[TestGetWebsiteTime/UTMMedium - 1]
RECORDS:
&{StatsTimeSummary:{Pathname:/ Duration:5119 DurationPercentage:100} DurationUpperQuartile:8112 DurationLowerQuartile:3490 Pageviews:0 Visitors:40 Bounces:7}

---

[TestGetWebsiteTime/UTMSource - 1]
RECORDS:
&{StatsTimeSummary:{Pathname:/ Duration:4172 DurationPercentage:100} DurationUpperQuartile:7280 DurationLowerQuartile:3464 Pageviews:0 Visitors:19 Bounces:4}

---

[TestGetWebsiteTimeSummary/Base - 1]
RECORDS:
&{Pathname:/ Duration:4996 DurationPercentage:0.3335}
&{Pathname:/contact Duration:4981 DurationPercentage:0.3325}
&{Pathname:/about Duration:5003 DurationPercentage:0.334}

---

[TestGetWebsiteTimeSummary/Browser - 1]
RECORDS:
&{Pathname:/ Duration:5009 DurationPercentage:0.3346}
&{Pathname:/contact Duration:4962 DurationPercentage:0.3315}
&{Pathname:/about Duration:4997 DurationPercentage:0.3338}

---

[TestGetWebsiteTimeSummary/Country - 1]
RECORDS:
&{Pathname:/ Duration:4976 DurationPercentage:0.3333}
&{Pathname:/about Duration:4976 DurationPercentage:0.3333}
&{Pathname:/contact Duration:4978 DurationPercentage:0.3334}

---

[TestGetWebsiteTimeSummary/Device - 1]
RECORDS:
&{Pathname:/ Duration:4960 DurationPercentage:0.3323}
&{Pathname:/about Duration:5013 DurationPercentage:0.3358}
&{Pathname:/contact Duration:4954 DurationPercentage:0.3319}

---

[TestGetWebsiteTimeSummary/Empty - 1]
RECORDS:

---

[TestGetWebsiteTimeSummary/Language - 1]
RECORDS:
&{Pathname:/ Duration:4973 DurationPercentage:0.3348}
&{Pathname:/about Duration:5048 DurationPercentage:0.3399}
&{Pathname:/contact Duration:4832 DurationPercentage:0.3253}

---

[TestGetWebsiteTimeSummary/OS - 1]
RECORDS:
&{Pathname:/ Duration:4985 DurationPercentage:0.3367}
&{Pathname:/about Duration:4894 DurationPercentage:0.3306}
&{Pathname:/contact Duration:4925 DurationPercentage:0.3327}

---

[TestGetWebsiteTimeSummary/Pathname - 1]
RECORDS:
&{Pathname:/ Duration:4985 DurationPercentage:1}

---

[TestGetWebsiteTimeSummary/Referrer - 1]
RECORDS:
&{Pathname:/ Duration:4865 DurationPercentage:1}

---

[TestGetWebsiteTimeSummary/UTMCampaign - 1]
RECORDS:
&{Pathname:/ Duration:5043 DurationPercentage:1}

---

[TestGetWebsiteTimeSummary/UTMMedium - 1]
RECORDS:
&{Pathname:/ Duration:5119 DurationPercentage:1}

---

[TestGetWebsiteTimeSummary/UTMSource - 1]
RECORDS:
&{Pathname:/ Duration:4172 DurationPercentage:1}

---
